# RL-AgenticSearch-Tinker

./: .gitignore  Art-2-TRL-migration.md  Colab_Training.ipynb  ENVIRONMENT_design.md  Patent Search.ipynb  README.md  blogpost.md  main.py  patent_search.py  patent_search_queries.csv  prepare.py  pyproject.toml  serve_model.py  utils.py
Evals/: create_Evals.py  patent_search_queries.csv
notebooks/: Patent Search.ipynb  Tinker_EMAIL_Agent_EranBenArtzy.ipynb
prior_art_search/: TINKER_grpo_train.config.json  TINKER_grpo_train.py  TINKER_qwen35_4b_smoke.py  __init__.py  local_patent_db.py  prior_art_tools.py  rollout.py  tinker_logging.py  training_loop.py  training_loop_qwen.py
training_logs/metrics/Qwen-Qwen3.5-4B-20260315-155004/: checkpoints.jsonl  metrics.jsonl
training_logs/metrics/Qwen-Qwen3.5-4B-20260315-155116/: checkpoints.jsonl
training_logs/metrics/Qwen-Qwen3.5-4B-20260315-155700/: checkpoints.jsonl
training_logs/metrics/Qwen-Qwen3.5-4B-20260315-155834/: checkpoints.jsonl  metrics.jsonl
training_logs/metrics/Qwen-Qwen3.5-4B-20260411-174023/: metrics.jsonl
training_logs/metrics/Qwen-Qwen3.5-4B-20260411-174507/: checkpoints.jsonl
training_logs/runs/Qwen-Qwen3.5-4B-20260315-155004/: config.json  run_config.json  run_summary.json
training_logs/runs/Qwen-Qwen3.5-4B-20260315-155116/: code.diff  config.json  metrics.jsonl  run_config.json  run_summary.json  train_iteration_000001.html
training_logs/runs/Qwen-Qwen3.5-4B-20260315-155700/: code.diff  config.json  metrics.jsonl  run_config.json  run_summary.json  train_iteration_000000.html
(+28 files in other folders)
