[project]
name = "patent-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.7.post0",
    "trl>=0.11.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "datasets>=2.19.0",
    "chromadb>=0.5.0",
    "wandb>=0.23.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.36.0",
    "ipywidgets>=8.1.8",
    "sentence-transformers>=5.1.2",
    "openpipe-art>=0.4.5",
]
