[project]
name = "patent-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "datasets>=2.19.0",
    "chromadb>=0.5.0",
    "wandb>=0.23.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.36.0",
    "ipywidgets>=8.1.8",
    "sentence-transformers>=5.1.2",
    "dspy>=3.0.4",
    "unsloth>=2024.8",
    "vllm>=0.11.0",
    "mlx-lm>=0.28.3",
    "weave>=0.51.56",
    "langchain-core>=1.0.5",
    "polars>=1.35.2",
    "tblib>=3.2.2",
    "torchtune>=0.6.1",
    "torchao>=0.14.1",
    "trl>=0.9.4",
]
